third_party/rust/linkme/v0_3/crate/tests/ui/generic_fn.stderr
error: cannot have generic parameters on distributed slice element
 --> tests/ui/generic_fn.rs:9:15
  |
9 | fn type_param<T>() {}
  |               ^

error: cannot have generic parameters on distributed slice element
  --> tests/ui/generic_fn.rs:12:16
   |
12 | fn const_param<const N: usize>() {}
   |                ^^^^^^^^^^^^^^
